crates/cox-tui/tests/snapshots/frames__composer_at_mention_open.snap
---
source: crates/cox-tui/tests/frames.rs
assertion_line: 268
expression: "buffer_to_string(&render(&state, 40, 8))"
---




 @ma
 ▸ src/main.rs
> look at @
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default]
