crates/cox-tui/tests/snapshots/frames__composer_multiline.snap
---
source: crates/cox-tui/tests/frames.rs
assertion_line: 258
expression: "buffer_to_string(&render(&state, 40, 6))"
---



> first line
  second
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default]
