crates/cox-tui/tests/snapshots/frames__composer_slash_palette.snap
---
source: crates/cox-tui/tests/frames.rs
expression: "buffer_to_string(&render(&state, 40, 8))"
---


 /mo
 ▸ mode
   model
   permissions
> /
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default]
