crates/cox-tui/tests/snapshots/frames__daltonized_light.snap
---
source: crates/cox-tui/tests/frames.rs
expression: "daltonized(\"cox-light-daltonized\")"
---
⚙ edit src/a.rs · +1 −1 · 4ms
  ± src/a.rs  +1 −1
  --- a/src/a.rs
  +++ b/src/a.rs
  @@ -1 +1 @@
  -let x = 1;
  +let x = 2;
│ ✓ 0B 4ms
⚙ bash false · 4ms
│ ✗ 0B 4ms
> Enter send · Shift+Tab mode cycle · @ file · / command
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default]
----
#0f4b6e



#6b3fa0
#b35a00
#0060a8
#0f4b6e
#b35a00
#b35a00
#8991b8
