crates/cox-tui/tests/snapshots/frames__frame_after_one_turn_replays_events.snap
---
source: crates/cox-tui/tests/frames.rs
expression: "format!(\"{scrollback}\\n----\\n{}\", buffer_to_string(&render(&state, 60, 5)))"
---
› read main
⚙ read src/main.rs · 3ms
│ fn main() {}
│ ✓ 12B 3ms
----
It prints nothing.


> Enter send · Shift+Tab mode cycle · @ file · / command
sonnet-5 · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default]
