crates/cox-tui/tests/snapshots/frames__frame_empty_session.snap
---
source: crates/cox-tui/tests/frames.rs
assertion_line: 109
expression: "buffer_to_string(&render(&state, 80, 6))"
---




>  message · @ file · / command
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · workspace-write · [default]
