crates/cox-tui/tests/snapshots/frames__frame_mono_theme_renders_notices_and_a_tool_card.snap
---
source: crates/cox-tui/tests/frames.rs
expression: "buffer_to_string(&render(&state, 60, 8))"
---
[security] danger-full-access is on
⚙ bash ls
⠋ README.md
⠋ 0.0s


>  message · @ file · / command
 - · ctx 0% · cache 0% · $0.00 · workspace-write · 0 tasks ·
